# fin

./:  fin.sol  .gitignore  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  DISTRO_PACKAGING.md  DOCKER.md  Dockerfile.solus  INSTALL.md  Makefile.toml  PKGBUILD  README.md  RELEASE.md  default.nix  fin.sol  flake.nix  github.txt  install.sh  sync-version.sh
.circleci/: config.yml  publish.yml
.claude/: settings.local.json
.github/actions/sync/: action.yml  package-lock.json  package.json  sync-version.sh
.github/actions/sync/src/: index.ts
.github/workflows/: build.yml  ci.yml  package-release.yml  release.yml  reusable-release.yml  reusable_release.yml  rust.yml  solus_cache_delete  test-sync.yml
.rpm/: fin.spec
assets/: config.toml  default.toml  fin.desktop  style.css
docker/: deb.Dockerfile  rpm.Dockerfile  solus.Dockerfile
github/actions/sync/: action.yml  package-lock.json  tsconfig.json
github/actions/sync/src/: index.ts
github/workflows/: build.yml  release.yml
packaging/aeryn/: stone.yaml
scripts/: bump-and-release.sh  release.sh  version-bump.sh
src/: config.toml  main.rs
