[package]
name = "fin"
version = "0.2.1"
edition = "2021"
description = "Finë is a simple, GTK4-based session controller for Linux desktops."
license = "MIT"
readme = "README.md"
authors = ["Hakim Jonas Ghoula"]
homepage = "https://github.com/hakimjonas/fin"
repository = "https://github.com/hakimjonas/fin"
documentation = "https://docs.rs/fin"

[dependencies]
gtk4 = { version = "0.9.5", features = ["v4_12"] }
glib = "0.20.7"
anyhow = "1.0.95"
im = { version = "15.1.0", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
clap = { version = "4.5.28", features = ["derive"] }
log = "0.4.25"
env_logger = "0.11.6"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"