[package]
name = "fin"
version = "0.2.20"
edition = "2021"
description = "Finë is a simple, GTK4-based session controller for Linux desktops."
license = "MIT"
readme = "README.md"
authors = ["Hakim Jonas Ghoula"]
homepage = "https://github.com/hakimjonas/fin"
repository = "https://github.com/hakimjonas/fin"
documentation = "https://docs.rs/fin"

[dependencies]
gtk4 = { version = "0.10", features = ["v4_16"] }
glib = "0.21"
anyhow = "1.0"
im = { version = "15.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
dirs = "6.0"
tempfile = "3.23"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[package.metadata.rpm]
# The RPM package name (if different from your crate name)
package = "fin"
# Version
version = "0.2.20"

# RPM package release number
release = "1"
# A short summary of the package
summary = "Finë: a simple GTK4-based session controller for Linux desktops"
# URL for the project
url = "https://github.com/hakimjonas/fin"
# License in SPDX format
license = "MIT"
# List runtime dependencies (as RPM package names)
requires = ["gtk4"]
# Build-time dependencies
makedepends = ["cargo", "rust", "git"]
# Additional assets to include (each entry: [source, install_path, permissions])
assets = [
    ["target/release/fin", "/usr/bin/fin", "755"],
    ["assets/config.toml", "/usr/share/fin/config.toml", "644"],
    ["assets/style.css", "/usr/share/fin/style.css", "644"]
]

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
fin = { path = "/usr/bin/fin" }

[package.metadata.deb]
maintainer = "Hakim Jonas Ghoula <hakim@walkthisway.dk>"
copyright = "2025, Hakim Jonas Ghoula <hakim@walkthisway.dk>"
license-file = ["LICENSE", "4"]
extended-description = """\
Finë is a simple, GTK4-based session controller designed for Linux desktops. \
It provides an intuitive interface for managing session transitions like logging out, \
locking, rebooting, or shutting down. Supports multiple desktop environments including \
Hyprland, Sway, i3, GNOME, Budgie, XFCE, and COSMIC."""
depends = "libgtk-4-1 (>= 4.8), libglib2.0-0 (>= 2.76), shared-mime-info"
recommends = "libgtk-4-bin, libgtk-4-media-gstreamer, adwaita-icon-theme"
section = "utils"
priority = "optional"
assets = [
    ["target/release/fin", "usr/bin/", "755"],
    ["assets/config.toml", "usr/share/fin/", "644"],
    ["assets/style.css", "usr/share/fin/", "644"],
    ["assets/default.toml", "usr/share/fin/themes/", "644"],
    ["assets/fin.desktop", "usr/share/applications/", "644"],
    ["README.md", "usr/share/doc/fin/", "644"],
]
